--- a/index.css
+++ b/index.css
@@ -11,11 +11,14 @@
   --fill-color-title: #faf;
   --shadow-color-title: #a1a;
   --white: #ffffff;
+  --black: #000000;
   --sz-ldng: 30px;
   --border-color-center: #aa88ff;
   --bcc-shadow: #7755cc;
   --bg-color-box: #112266;
   --border-color-box: #3377aa;
+  --no-boxes-color: #ff8855;
+  --boxes-color: #33aa55;
   /*COLORS WITH HOVER*/
   /*CHV = Color Hover*/
 
@@ -85,6 +88,23 @@ body {
 .header-nav-button img {
     max-width: 100%;
     height: auto;
+}
+.button-box {
+  position: relative;
+}
+.counter-boxes {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--no-boxes-color);
+  border-radius: 50%;
+  color: var(--white);
+  border: 1px solid var(--white);
+  width: 18px;
+  height: 18px;
+  top: 0;
+  right: 0;
 }
 main {
   display: flex;
